fixed padding for socials container icons on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -302,7 +302,7 @@ img {
     justify-content: center;
   }
 
-
+  /****** START HERE ******/
   /* box 3 */
   .socials-container {
     display: flex;
@@ -322,6 +322,13 @@ img {
     box-shadow: 0 3px 15px rgb(0 0 0 / 35%);
     display: flex;
     align-items: center;
+  }
+
+  .socials-container a {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
   }
 
   .socials-container div:nth-child(1) {
